Initial commit: TgVideo bot for video streaming in Telegram voice chats

--- a/sample.env
+++ b/sample.env
@@ -1,32 +1,88 @@
 # If you are reading this ⚠️ DO NOT PUT REAL KEYS HERE ⚠️ use vi .env instead
 
+# =============================================================================
+# 🔑 BOT CONFIGURATION
+# =============================================================================
 API_ID=
 API_HASH=
-TOKEN=
-STRING1=
-STRING2=
-STRING3=
-STRING4=
-STRING5=
-STRING6=
-STRING7=
-STRING8=
-STRING9=
-STRING10=
-MONGO_URI=
-API_URL=https://tgmusic.fallenapi.fun
-API_KEY=
-OWNER_ID=
-LOGGER_ID=
-DEFAULT_SERVICE=youtube
-MIN_MEMBER_COUNT=
-DOWNLOADS_DIR=database/music
-DB_NAME=MusicBot
+BOT_TOKEN=
+
+# =============================================================================
+# 🎬 VIDEO BOT SETTINGS (OPTIMIZED FOR LARGE FILES)
+# =============================================================================
+# Enable/disable video features (true/false)
+ENABLE_VIDEO=true
+
+# Maximum video file size in MB (set to 2.5GB for your needs)
+MAX_VIDEO_SIZE=2500
+
+# Supported video formats (comma-separated)
+SUPPORTED_VIDEO_FORMATS=mp4,avi,mkv,mov,wmv,flv,webm,m4v,3gp
+
+# Video quality settings (360p, 720p, 1080p)
+DEFAULT_VIDEO_QUALITY=1080p
+
+# Session string for userbot functionality
+SESSION_STRING=
+
+# =============================================================================
+# 🗄️ DATABASE & STORAGE
+# =============================================================================
+# MongoDB connection string
+DATABASE_URI=
+
+# Database name
+DATABASE_NAME=
+
+# Download directory for videos
+DOWNLOADS_DIR=database/videos
+
+# =============================================================================
+# 👑 ADMIN & PERMISSIONS
+# =============================================================================
+# Chat ID where bot operates
+CHAT=
+
+# Log group for bot activities
+LOG_GROUP=
+
+# Admin user IDs (comma-separated)
+ADMINS=
+
+# =============================================================================
+# ⚙️ BOT BEHAVIOR
+# =============================================================================
+# Auto-leave voice chat when empty (true/false)
+AUTO_LEAVE=true
+
+# Ignore background updates (true/false)
+IGNORE_BACKGROUND_UPDATES=true
+
+# =============================================================================
+# 🎨 APPEARANCE & UI
+# =============================================================================
+# Bot start image URL
 START_IMG=https://i.pinimg.com/1200x/e8/89/d3/e889d394e0afddfb0eb1df0ab663df95.jpg
-IGNORE_BACKGROUND_UPDATES=True
-AUTO_LEAVE=True
+
+# =============================================================================
+# 🔒 SECURITY & PROXY
+# =============================================================================
+# Proxy settings (if needed)
 PROXY=
-COOKIES_URL=
+
+# =============================================================================
+# 📱 SOCIAL & SUPPORT
+# =============================================================================
 SUPPORT_GROUP=
 SUPPORT_CHANNEL=
-DEVS=
+
+# =============================================================================
+# 📝 NOTES FOR LARGE VIDEO FILES
+# =============================================================================
+# 1. MAX_VIDEO_SIZE=2500 allows videos up to 2.5GB
+# 2. Large files need good internet connection
+# 3. Download time will be longer for big videos
+# 4. Ensure server has enough storage space
+# 5. Consider using MP4 format for best compatibility
+# 6. Bot must have admin privileges in groups
+# 7. Voice chat must be active for video playback
