--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,6 @@ py-tgcalls~=2.2.5
 pytgcrypto~=1.2.11
 pytdbot~=0.9.6.dev1
 pytz~=2025.2
-tdjson~=1.8.51
+# tdjson~=1.8.51  # Not available on Windows, removed
 ujson~=5.10.0
 yt-dlp~=2025.7.21
